--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="forfatter">Interesser<p>
     <p class="sitat">Erfaringer<p>
 
-    <a href="http://www.vg.no">VG.no</a>
+    <a href="https://scratch.mit.edu/projects/283958641/">Scratchspill</a>
 
   </body>
 </html>
