--- a/hringr.html
+++ b/hringr.html
@@ -9,10 +9,14 @@
       <div id="header">
              <img src="img/kontor2.jpg" width="1333" height="250" alt="kontor2" />
     </div>
-</div>
-    <img class="bilde" src="img/dress.jpg" alt="Bilde av mann i dress">
 
-    <h1>Jon Are Haveråen-Brattås</h1>
+    <img class="bilde" src="img/koding.jpeg" alt="Bilde av kodeskjerm">
+
+    <h1>Lær å lage spill i Scratch</h1>
+
+    <p>Her kan du lære å lage et enkelt spill som kallers for "Hringr. Du kan teste ut spillet ved å trykke på "Slik blir spillet".</p>
+
+    <a href="https://scratch.mit.edu/projects/283958641/">Slik blir spillet</a>
 <ul>
   <li><a href="index.html">Hjem</a></li>
   <li><a href="news.html">Nyheter</a></li>
