--- a/prog.html
+++ b/prog.html
@@ -8,11 +8,14 @@
   <body>
       <div id="header">
              <img src="img/kontor2.jpg" width="1333" height="250" alt="kontor2" />
-    </div>
-</div>
-    <img class="bilde" src="img/dress.jpg" alt="Bilde av mann i dress">
+      </div>
 
-    <h1>Jon Are Haveråen-Brattås</h1>
+    <img class="bilde" src="img/koding.jpeg" alt="Bilde av Jon Are">
+
+    <h1>Programmering</h1>
+
+    <a href="hrings.html">Lær å lage spill i Scratch</a>
+
 <ul>
   <li><a href="index.html">Hjem</a></li>
   <li><a href="news.html">Nyheter</a></li>
