--- a/hringr.html
+++ b/hringr.html
@@ -6,22 +6,31 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div id="header">
-             <img src="img/kontor2.jpg" width="1333" height="250" alt="kontor2" />
-    </div>
 
-    <img class="bilde" src="img/koding.jpeg" alt="Bilde av kodeskjerm">
+      <div id="header">
+             <img src="img/kontor2.jpg" width="1333" height="125" alt="kontor2" />
+    </div>
+    <ul>
+      <li><a href="index.html">Hjem</a></li>
+      <li><a href="news.html">Nyheter</a></li>
+      <li><a href="project.html">Prosjekter</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Programmering</a>
+        <div class="dropdown-content">
+          <a href="prog.html">Info</a>
+          <a href="hringr.html">Hringr</a>
+          <a href="https://wwww.scratch.mit.edu">Scratch</a>
+        </div>
+      </li>
+    </ul>
+
+    <img class="bilde" src="img/Koding.jpeg" alt="Bilde av kodeskjerm">
 
     <h1>Lær å lage spill i Scratch</h1>
 
     <p>Her kan du lære å lage et enkelt spill som kallers for "Hringr. Du kan teste ut spillet ved å trykke på "Slik blir spillet".</p>
 
     <a href="https://scratch.mit.edu/projects/283958641/">Slik blir spillet</a>
-<ul>
-  <li><a href="index.html">Hjem</a></li>
-  <li><a href="news.html">Nyheter</a></li>
-  <li><a href="prog.html">Programmering</a></li>
-  <li><a href="project.html">Prosjekter</a></li>
-</ul>
+
 
 </html>
