--- a/news.html
+++ b/news.html
@@ -23,8 +23,9 @@
     </li>
   </ul>
 
-    <img class="bilde" src="img/dress.jpg" alt="Bilde av mann i dress">
+    <img class="bilde" src="img/news.jpg" alt="Bilde av avis">
 
-    <h1>Jon Are Haveråen-Brattås</h1>
-    <h4>Dette er en hjemmeside som er under utvikling. På denne hjemmesiden kan man lære litt om programmering og få inspirasjon til å sette i gang med ulike typer prosjekter.</h4>
+    <h1>Nyheter</h1>
+    <h4>Her kan du følge med på nyheter fra IT-verden.</h4>
+
 </html>
