--- a/prog.html
+++ b/prog.html
@@ -9,18 +9,25 @@
       <div id="header">
              <img src="img/kontor2.jpg" width="1333" height="250" alt="kontor2" />
       </div>
+    </div>
+    <ul>
+      <li><a href="index.html">Hjem</a></li>
+      <li><a href="news.html">Nyheter</a></li>
+      <li><a href="project.html">Prosjekter</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Programmering</a>
+        <div class="dropdown-content">
+          <a href="prog.html">Info</a>
+          <a href="hringr.html">Hringr</a>
+          <a href="https://wwww.scratch.mit.edu">Scratch</a>
+        </div>
+      </li>
+    </ul>
 
-    <img class="bilde" src="img/koding.jpeg" alt="Bilde av Jon Are">
+    <img class="bilde" src="img/Koding.jpeg" alt="Bilde av kodeskjerm">
 
     <h1>Programmering</h1>
 
-    <a href="hrings.html">Lær å lage spill i Scratch</a>
-
-<ul>
-  <li><a href="index.html">Hjem</a></li>
-  <li><a href="news.html">Nyheter</a></li>
-  <li><a href="prog.html">Programmering</a></li>
-  <li><a href="project.html">Prosjekter</a></li>
-</ul>
+    <a href="hringr.html">Lær å lage spill i Scratch</a>
 
 </html>
