--- a/project.html
+++ b/project.html
@@ -23,8 +23,8 @@
     </li>
   </ul>
 
-    <img class="bilde" src="img/dress.jpg" alt="Bilde av mann i dress">
+    <img class="bilde" src="img/raspberrypi.jpg" alt="Bilde av raspberrr pi nes">
 
-    <h1>Jon Are Haveråen-Brattås</h1>
-    <h4>Dette er en hjemmeside som er under utvikling. På denne hjemmesiden kan man lære litt om programmering og få inspirasjon til å sette i gang med ulike typer prosjekter.</h4>
+    <h1>Prosjekter</h1>
+    <h4>Her kommer det beskrivelser av ulike prosjketer.</h4>
 </html>
