--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <div id="header">
-             <img src="img/kontor2.jpg" width="1333" height="125" alt="kontor2" />
+             <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
     </div>
   <ul>
     <li><a href="index.html">Hjem</a></li>
@@ -17,7 +17,7 @@
       <a href="javascript:void(0)" class="dropbtn">Programmering</a>
       <div class="dropdown-content">
         <a href="prog.html">Info</a>
-        <a href="hringr.html">Hringr</a>
+        <a href="Spillkonsoll.html">Spillkonsoll</a>
         <a href="https://wwww.scratch.mit.edu">Scratch</a>
       </div>
     </li>
