--- a/prog.html
+++ b/prog.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
       <div id="header">
-             <img src="img/kontor2.jpg" width="1333" height="250" alt="kontor2" />
-      </div>
+             <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
     </div>
     <ul>
       <li><a href="index.html">Hjem</a></li>
@@ -18,7 +18,7 @@
         <a href="javascript:void(0)" class="dropbtn">Programmering</a>
         <div class="dropdown-content">
           <a href="prog.html">Info</a>
-          <a href="hringr.html">Hringr</a>
+          <a href="Spillkonsoll.html">Spillkonsoll</a>
           <a href="https://wwww.scratch.mit.edu">Scratch</a>
         </div>
       </li>
