--- a/project.html
+++ b/project.html
@@ -6,22 +6,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
       <div id="header">
-             <img src="img/kontor2.jpg" width="1333" height="125" alt="kontor2" />
+             <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
     </div>
-  <ul>
-    <li><a href="index.html">Hjem</a></li>
-    <li><a href="news.html">Nyheter</a></li>
-    <li><a href="project.html">Prosjekter</a></li>
-    <li class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn">Programmering</a>
-      <div class="dropdown-content">
-        <a href="prog.html">Info</a>
-        <a href="hringr.html">Hringr</a>
-        <a href="https://wwww.scratch.mit.edu">Scratch</a>
-      </div>
-    </li>
-  </ul>
+    <ul>
+      <li><a href="index.html">Hjem</a></li>
+      <li><a href="news.html">Nyheter</a></li>
+      <li><a href="project.html">Prosjekter</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Programmering</a>
+        <div class="dropdown-content">
+          <a href="prog.html">Info</a>
+          <a href="Spillkonsoll.html">Spillkonsoll</a>
+          <a href="https://wwww.scratch.mit.edu">Scratch</a>
+        </div>
+      </li>
+    </ul>
 
     <img class="bilde" src="img/raspberrypi.jpg" alt="Bilde av raspberrr pi nes">
 
