--- a/news.html
+++ b/news.html
@@ -6,23 +6,26 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
       <div id="header">
              <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
-    </div>
-    <ul>
-      <li><a href="index.html">Hjem</a></li>
-      <li><a href="news.html">Nyheter</a></li>
-      <li><a href="project.html">Prosjekter</a></li>
-      <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Programmering</a>
-        <div class="dropdown-content">
-          <a href="prog.html">Info</a>
-          <a href="Spillkonsoll.html">Spillkonsoll</a>
-          <a href="https://wwww.scratch.mit.edu">Scratch</a>
-        </div>
-      </li>
-    </ul>
+     </div>
+     <ul>
+       <li><a href="index.html">Hjem</a></li>
+       <li><a href="news.html">Nyheter</a></li>
+       <li class="dropdown">
+         <a href="javascript:void(0)" class="dropbtn">Prosjekter</a>
+         <div class="dropdown-content">
+           <a href="Spillkonsoll.html">Spillkonsoll</a>
+       <li class="dropdown">
+         <a href="javascript:void(0)" class="dropbtn">Programmering</a>
+         <div class="dropdown-content">
+           <a href="prog.html">Info</a>
+           <a href="Spillkonsoll.html">Spillkonsoll</a>
+           <a href="https://www.scratch.mit.edu">Scratch</a>
+         </div>
+       </li>
+     </ul>
+
 
     <img class="bilde" src="img/news.jpg" alt="Bilde av avis">
 
