--- a/Spillkonsoll.html
+++ b/Spillkonsoll.html
@@ -8,23 +8,28 @@
   <body>
 
       <div id="header">
-             <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
-    </div>
-    <ul>
-      <li><a href="index.html">Hjem</a></li>
-      <li><a href="news.html">Nyheter</a></li>
-      <li><a href="project.html">Prosjekter</a></li>
-      <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Programmering</a>
-        <div class="dropdown-content">
-          <a href="prog.html">Info</a>
-          <a href="Spillkonsoll.html">Spillkonsoll</a>
-          <a href="https://wwww.scratch.mit.edu">Scratch</a>
-        </div>
-      </li>
-    </ul>
+             <img src="img/kontor2.jpg" width="1333" height="125" alt="kontor2" />
+   </div>
+   <ul>
+     <li><a href="index.html">Hjem</a></li>
+     <li><a href="news.html">Nyheter</a></li>
+        <li><a href="news.html">Nyheter</a></li>
+     <li class="dropdown">
+       <a href="javascript:void(0)" class="dropbtn">Prosjekter</a>
+       <div class="dropdown-content">
+         <a href="Spillkonsoll.html">Spillkonsoll</a>
+     <li class="dropdown">
+       <a href="javascript:void(0)" class="dropbtn">Programmering</a>
+       <div class="dropdown-content">
+         <a href="prog.html">Info</a>
+         <a href="Spillkonsoll.html">Spillkonsoll</a>
+         <a href="https://www.scratch.mit.edu">Scratch</a>
+       </div>
+     </li>
+   </ul>
 
-    <img class="bilde" src="img/Koding.jpeg" alt="Bilde av kodeskjerm">
+
+    <img class="bilde" src="img/raspberrypi.jpg" alt="Bilde av raspberrr pi nes">
 
     <h1>Spillkonsoll</h1>
 
@@ -33,7 +38,7 @@
     </iframe>
     <iframe src="https://scratch.mit.edu/projects/331110993/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen>
     </iframe>
-    <iframe src="https://scratch.mit.edu/projects/341543740/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen="yes">
+    <iframe src="https://scratch.mit.edu/projects/341543740/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen>
     </iframe>
 
 </html>
