--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
   <body>
       <div id="header">
              <img src="img/kontor2.jpg" width="100%" height="125" alt="kontor2" />
-    </div>
+  </div>
   <ul>
     <li><a href="index.html">Hjem</a></li>
     <li><a href="news.html">Nyheter</a></li>
-    <li><a href="project.html">Prosjekter</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Prosjekter</a>
+      <div class="dropdown-content">
+        <a href="Spillkonsoll.html">Spillkonsoll</a>
     <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Programmering</a>
       <div class="dropdown-content">
         <a href="prog.html">Info</a>
         <a href="Spillkonsoll.html">Spillkonsoll</a>
-        <a href="https://wwww.scratch.mit.edu">Scratch</a>
+        <a href="https://www.scratch.mit.edu">Scratch</a>
       </div>
     </li>
   </ul>
